# cityscaper

./: .gitattributes  .gitignore  CLAUDE.md  README.md  README_USER.md  pyproject.toml  requirements.txt
cityscaper/: arkit.py  blender_building.py  blender_cli.py  blender_single_building.py  constants.py  dae_structures.py  geom.py  main.py  modeling.py  utils.py
cityscaper/autolot/: __init__.py  autolot.py  main_interface.py  parcel_analysis.py  streets.py  utils.py  viz.py
data/: Dubace Triangle_Test_02.dae  five_rezonings.RDS  five_rezonings_nongeo.RDS  five_rezonings_nongeo_unfiltered.RDS  mh-dump0.kml  mh-dump1.kml  rezoning_BR_output.RDS  rezoning_D_output.RDS  rezoning_F_output.RDS  rezoning_duboce.kml  rezoning_frontier.csv  rezoning_frontier_front_line.json  rezoning_output.csv  sf_map.RDS  sf_map.json  sf_map_unfiltered.RDS  sf_map_unfiltered.json
data/input_scenarios/: duboce_triangle_overrides.csv  duboce_triangle_overrides_housingpalooza.csv  exclude_lots_from_development.csv  geary_overrides.csv  marina_overrides.csv
docs/: auto-frontage.md
notebooks/: Cityscaper_EDA.ipynb  notebook_utils.py
