[tool.poetry]
name = "cityscaper"
version = "0.1.0"
description = ""
authors = ["emunsing <eric.munsing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Note: BPy currently requires Python 3.11
python = "3.11.*"
numpy = "<2.0.0"
pandas = "<2.0.0"
mathutils = "*"
pyreadr = "*"
bpy = "*"


# DEV DEPDENDENCIES - Jupyter, visualizations, etc. Add these like `$ poetry install --with dev`
[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
jupyter = "*"
ipykernel = "*"
pyarrow = "*"
matplotlib = "*"
python-dotenv = "*"
black = "*"
pytest = "*"

[tool.poetry.group.geo]
optional = true
[tool.poetry.group.geo.dependencies]
osmnx = "*"
shapely = "*"
geopandas = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
