[tool.poetry]
name = "cityscaper"
version = "0.1.0"
description = ""
authors = ["emunsing <eric.munsing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# Note: BPy currently requires Python 3.11
python = "3.11.*"
numpy = "<2.0.0"
pandas = "<2.0.0"
mathutils = "*"
pyreadr = "*"
bpy = "*"
pathlib = "*"


# DEV DEPDENDENCIES - Jupyter, visualizations, etc. Add these like `$ poetry install --with dev`
[tool.poetry.group.dev]
optional = true
[tool.poetry.group.dev.dependencies]
loguru = "^0.7.3"
seaborn = "^0.13.2"
jupyter = "*"
ipykernel = "*"
pyarrow = "*"
matplotlib = "*"
python-dotenv = "*"
black = "*"
pytest = "*"
tqdm = "^4.67.1"
ipywidgets = "^8.1.7"

[tool.poetry.group.geo]
optional = true
[tool.poetry.group.geo.dependencies]
osmnx = "*"
shapely = "*"
geopandas = "*"
fiona = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
